--- a/config.yml
+++ b/config.yml
@@ -74,6 +74,8 @@ params:
               url: archive/
             - name: Blog
               url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+            - name: YouTube
+              url: https://youtube.com
 
     socialIcons:
         - name: CV
