--- a/config.yml
+++ b/config.yml
@@ -55,8 +55,8 @@ params:
     profileMode:
           enabled: true
           title: Eshan J
-          subtitle: "Geralt of Rivia is a fictional character and the protagonist of The Witcher series of short stories and novels by Polish author Andrzej Sapkowski. He is a magically enhanced monster-hunter known as a 'witcher', who possesses supernatural abilities due to his mutations"
-          imageUrl: "geralt.gif"
+          subtitle: "This is for learning purpose to get hands on git and github. Working on Progress...."
+          imageUrl: "forest.gif"
           imageWidth: 220
           imageHeight: 200
           buttons:
