--- a/config.yml
+++ b/config.yml
@@ -73,7 +73,7 @@ params:
             - name: Archive
               url: archive/
             - name: Blog
-              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+              url: blog/
             - name: YouTube
               url: https://youtube.com
 
