--- a/config.yml
+++ b/config.yml
@@ -23,10 +23,13 @@ menu:
           weight: 3
         - name: Data
           url: data/
-          weight: 4 
+          weight: 4
         - name: Blog
-          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+          url: blog/
           weight: 6
+        - name: Articles
+          url: articles/
+          weight: 7
 
 params:
     description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
